--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Dit ben ik </title>
+<title>informatica </title>
 </head>
 <body>
 
-<h1></h1>
+<h1>Dit ben ik </h1>
 <p>Ik ben Aimée Pruis</p>
 
 </body>
