--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<link rel="stylesheet" type="text/css"href="CSS/desin.css">
 <title>informatica </title>
 </head>
 <body>
