--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" type="text/css"href="CSS/desin.css">
 <title>informatica </title>
 </head>
-<body>
+<body style="background-color:red;">
 
 <h1>Dit ben ik </h1>
 <p>Ik ben Aimée Pruis</p>
