--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css"href="CSS/desin.css">
-<title>informatica </title>
+<title>Informatica </title>
 </head>
-<body style="background-color:red;">
+<body>
 
 <h1>Dit ben ik </h1>
-<p>Ik ben Aimée Pruis</p>
-
+<p></p>
+<p>Ik ben <span style="border: 1px solid black">Aimée Pruis</span>
+.</p>
 </body>
 </html>
