--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 </head>
 <body>
 
-<h1>Dit ben ik </h1>
+<h2>Dit <span style="color:red">ben</span> ik</h2>
 <p></p>
-<p>Ik ben <span style="border: 1px solid black">Aimée Pruis</span>
+<p>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>
 ,.</p>
+
+
 </body>
 </html>
