--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<h2>Dit <span style="color:red">ben</span> ik</h2>
+<h2>Dit ben <span style="color:red">ik</span></h2>
 <p></p>
 <p>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>
 ,.</p>
