--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
 
-<h2>Dit ben <span style="color:red">ik</span></h2>
+<h1>Dit ben <span style="color:red">ik</span></h1>
+
+<h3>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>.</h3>
 <p></p>
-<p>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>
-,.</p>
 
 
 </body>
