--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css"href="CSS/desin.css">
+<link rel="stylesheet" type="text/css"href="CSS/design.css">
 <title>Informatica </title>
 </head>
 <body>
