--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <title>Informatica </title>
 </head>
 <body>
+body {
+  background-color: lightblue;
+}
 
 <h1>Dit ben <span style="color:red">ik</span></h1>
 
