--- a/index.html
+++ b/index.html
@@ -3,17 +3,26 @@
 <head>
 <link rel="stylesheet" type="text/css"href="CSS/design.css">
 <title>Informatica </title>
-</head>
-<body>
+<style>
 body {
   background-color: lightblue;
 }
 
-<h1>Dit ben <span style="color:red">ik</span></h1>
+h1 {
+  color: white;
+  text-align: center;
+}
 
-<h3>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>.</h3>
-<p></p>
+p {
+  font-family: verdana;
+  font-size: 20px;
+}
+</style>
+</head>
+<body>
+
+<h1>My First CSS Example</h1>
+<p>This is a paragraph.</p>
 
 
 </body>
-</html>
