--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@ p {
 </head>
 <body>
 
-<h1>My First CSS Example</h1>
-<p>This is a paragraph.</p>
+<h1>Dit ben <span style="color:red">ik</span></h1>
+<p>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>.</p>
 
 
 </body>
