--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ p {
 <body>
 
 <h1>Dit ben <span style="color:red">ik</span></h1>
-<p>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>.</p>
+<p>
+<h3>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>.</h3>
+</p>
 
 
 </body>
