--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="CSS/design.css">>
+<link rel="stylesheet" type="text/css" href="CSS/design.css">
 <title>Informatica </title>
 <style>
 body {
-  background-color: lightblue;
+      background-color: lightblue;
 }
 
 h1 {
