--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <link rel="stylesheet" type="text/css" href="CSS/design.css">
-<title>Informatica </title>
+<title>Wie ben ik? </title>
 <style>
 body {
       background-color: lightblue;
@@ -25,6 +25,5 @@ p {
 <p>
 <h3>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>.</h3>
 </p>
-
-
+<img src="https://images0.persgroep.net/rcs/yUMN5sSNK_dEgJs68404f_SD6GM/diocontent/112780442/_crop/0/96/1600/904/_fitwidth/1240?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.9".jpg/>
 </body>
