--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ p {
 <h1>Dit ben <span style="color:red">ik</span></h1>
 <p>
 <h3>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>.</h3>
-<a href=<a href="https://www.facebook.com/jack.brunsting" title="mijn opa's facebookpagina">Dit is de boot die ik bedoel</a>
+<a href=<a href="https://f.jwwb.nl/public/6/0/1/staverse-jol-aimee/Frankrijk2008.jpg" title="mijn opa's facebookpagina">Dit is de boot die ik bedoel.</a>
 </p>
 <img src="https://images0.persgroep.net/rcs/yUMN5sSNK_dEgJs68404f_SD6GM/diocontent/112780442/_crop/0/96/1600/904/_fitwidth/1240?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.9".jpg/>
 
