--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@ p {
 <h3>Mijn opa heeft zelf een boot gebouwd. Toen hij klaar was moet de boot nog een naam, ik was toen bijna geboren en hgeeft de boot toen naar mij genoemd. Dus nu heet de boot
 <a href="https://f.jwwb.nl/public/6/0/1/staverse-jol-aimee/Frankrijk2008.jpg" title="De Aimée">de Aimée.</a></h3>
 <h3>Ik doe ook aan sport namelijk hockey. ik hockey in Hoogezand bij de club
-<a href="https://www.mhcdash.nl/site/default.asp?m=4&Option=101&teamnummer=939" title="Dash">Dash.</a></h3>
-<h3>ik zit in B3.</h3>
+<a href="https://www.mhcdash.nl/site/default.asp?m=4&Option=101&teamnummer=939" title="Dash">Dash.</a>
+Ik zit in B3.</h3>
 </p>
 <h3>ik houd echt heel veel van dieren mijn lieverlingsdier is de panda. </h3>
 <img src="https://images0.persgroep.net/rcs/yUMN5sSNK_dEgJs68404f_SD6GM/diocontent/112780442/_crop/0/96/1600/904/_fitwidth/1240?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.9".jpg/>
