--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@ p {
 
 <h1>Dit ben <span style="color:red">ik</span></h1>
 <p>
+  
 <h3>Ik ben <span style="border: 1px solid red">Aimée Pruis</span>.</h3>
+<img src="selfie aimee.jpg" alt="foto" width="240" height="180">
 <h3>Mijn opa heeft zelf een boot gebouwd. Toen hij klaar was moet de boot nog een naam, ik was toen bijna geboren en hgeeft de boot toen naar mij genoemd. Dus nu heet de boot
 <a href="https://f.jwwb.nl/public/6/0/1/staverse-jol-aimee/Frankrijk2008.jpg" title="De Aimée">de Aimée.</a></h3>
 <h3>Ik doe ook aan sport namelijk hockey. ik hockey in Hoogezand bij de club
