--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@ p {
 
 <h1>Dit ben <span style="color:red">ik</span></h1>
 
-
-<img src="selfie aimee.jpg" alt="foto" width="300" height="200"><h3> Ik ben Aimée Pruis.</h3>
+<h3> Ik ben <span style="color:pink">Aimée Pruis</span> en ik ben 15. Ik woon in kropswolde.</h3>
+<img src="selfie aimee.jpg" alt="foto" width="300" height="200">
 
 <p>
 <h3>Mijn opa heeft zelf een boot gebouwd. Toen hij klaar was moest de boot nog een naam, ik was toen bijna geboren en heeft de boot toen naar mij genoemd. Dus nu heet de boot
