--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ p {
 
 <h1>Dit ben <span style="color:red">ik</span></h1>
 
-<h3> Ik ben <span style="color:pink">Aimée Pruis</span> en ik ben 15. Ik woon in kropswolde.</h3>
+<h3> Ik ben <span style="color:darkblue">Aimée Pruis</span> en ik ben 15. Ik woon in kropswolde.</h3>
 <img src="selfie aimee.jpg" alt="foto" width="300" height="200">
 
 <p>
