--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@ Ik zit in B3.</h3>
 </p>
 <h3>Ik houd echt heel veel van dieren maar ik heb en mag geen huisdier.
 Mijn lieverlingsdier is de panda. </h3>
+.tekstbox img {
+            width: 260px;
+            height: 260px;
+            border: 10px solid black;
+            float: right;
+            margin: 10px;
 <img src="https://images0.persgroep.net/rcs/yUMN5sSNK_dEgJs68404f_SD6GM/diocontent/112780442/_crop/0/96/1600/904/_fitwidth/1240?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.9".jpg width="300" height="200"/>
 
 </body>
