--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@ p {
 
 <h1>Dit ben <span style="color:red">ik</span></h1>
 
-<h3> Ik ben <span style="color:darkblue">Aimée Pruis</span> en ik ben 15.
-Ik woon in kropswolde.</h3>
+<div class="mijn naam">
+<h2>Ik ben <span style="color:darkblue">Aimée Pruis</span></h2>
+<p>en ik ben 15.Ik woon in kropswolde.</p>
 <img src="selfie aimee.jpg" alt="foto" width="300" height="200">
+</div>
 
 <p>
 <h3>Mijn opa heeft zelf een boot gebouwd. Toen hij klaar was moest de boot nog een naam,
@@ -37,7 +39,19 @@ Ik zit in B3.</h3>
 </p>
 <h3>Ik houd echt heel veel van dieren maar ik heb en mag geen huisdier.
 Mijn lieverlingsdier is de panda. </h3>
-
 <img src="https://images0.persgroep.net/rcs/yUMN5sSNK_dEgJs68404f_SD6GM/diocontent/112780442/_crop/0/96/1600/904/_fitwidth/1240?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.9".jpg width="300" height="200"/>
 
 </body>
+
+
+
+
+<div class="cities">
+<h2>Paris</h2>
+<p>Paris is the capital of France.</p>
+</div>
+
+<div class="cities">
+<h2>Tokyo</h2>
+<p>Tokyo is the capital of Japan.</p>
+</div>
