--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 <link rel="stylesheet" type="text/css" href="CSS/design.css">
 <title>Wie ben ik? </title>
 <style>
+.mijn naam {
+  background-color: tomato;
+  color: white;
+  padding: 10px;
+}
 body {
       background-color: lightblue;
 }
@@ -43,34 +48,5 @@ Ik zit in B3.</h3>
 Mijn lieverlingsdier is de panda.</h3>
 </div>
 <img src="https://images0.persgroep.net/rcs/yUMN5sSNK_dEgJs68404f_SD6GM/diocontent/112780442/_crop/0/96/1600/904/_fitwidth/1240?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.9".jpg width="300" height="200"/>
-
-</body>
-
-
-
-
-
-
-
-
-<style>
-.city {
-  background-color: tomato;
-  color: white;
-  padding: 10px;
-}
-
-.main {
-  text-align: center;
-}
-</style>
-<body>
-
-<h2>Multiple Classes</h2>
-<p>All three headers have the class name "city". In addition, London also have the class name "main", which center-aligns the text.</p>
-
-<h2 class="city main">London</h2>
-<h2 class="city">Paris</h2>
-<h2 class="city">Tokyo</h2>
 
 </body>
