--- a/index.html
+++ b/index.html
@@ -4,11 +4,6 @@
 <link rel="stylesheet" type="text/css" href="CSS/design.css">
 <title>Wie ben ik? </title>
 <style>
-.mijn naam {
-  background-color: tomato;
-  color: white;
-  padding: 10px;
-}
 body {
       background-color: lightblue;
 }
@@ -28,17 +23,16 @@ p {
 
 <h1>Dit ben <span style="color:red">ik</span></h1>
 
-<div class="mijn naam">
-<h3>Ik ben <span style="color:darkblue">Aimée Pruis</span></h3>
-<h3>en ik ben 15.Ik woon in kropswolde.</h3>
+
+<h3 style="background-color:DodgerBlue;">Ik ben <span style="color:darkblue">Aimée Pruis</span>en ik ben 15.Ik woon in kropswolde.</h3>
 <img src="selfie aimee.jpg" alt="foto" width="300" height="200">
 </div>
 
 <div class="iets over mij">
-<h3>>Mijn opa heeft zelf een boot gebouwd. Toen hij klaar was moest de boot nog een naam,
+<h3 style="background-color:rgba(255, 99, 71, 0.5);">>Mijn opa heeft zelf een boot gebouwd. Toen hij klaar was moest de boot nog een naam,
 ik was toen bijna geboren en heeft de boot toen naar mij genoemd. Dus nu heet de boot
 <a href="https://f.jwwb.nl/public/6/0/1/staverse-jol-aimee/Frankrijk2008.jpg" title="De Aimée">de Aimée.</a></h3>
-<h3>Ik doe ook aan sport namelijk hockey. Ik hockey in Hoogezand bij de club
+<h3 style="background-color:rgba(255, 99, 71, 0.5);">Ik doe ook aan sport namelijk hockey. Ik hockey in Hoogezand bij de club
 <a href="https://www.mhcdash.nl/site/default.asp?m=4&Option=101&teamnummer=939" title="Dash">Dash.</a>
 Ik zit in B3.</h3>
 </div>
