--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Ik zit in B3.</h3>
 </div>
 
 <div class="nog iets over mij">
-<h3>Ik houd echt heel veel van dieren maar ik heb en mag geen huisdier.
+<h3 style="background-color:rgba(255, 99, 71, 0.5);">Ik houd echt heel veel van dieren maar ik heb en mag geen huisdier.
 Mijn lieverlingsdier is de panda.</h3>
 </div>
 <img src="https://images0.persgroep.net/rcs/yUMN5sSNK_dEgJs68404f_SD6GM/diocontent/112780442/_crop/0/96/1600/904/_fitwidth/1240?appId=93a17a8fd81db0de025c8abd1cca1279&quality=0.9".jpg width="300" height="200"/>
