--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ p {
 <h1>Dit ben <span style="color:red">ik</span></h1>
 
 
-<h3 style="background-color:DodgerBlue;">Ik ben <span style="color:darkblue">Aimée Pruis</span>en ik ben 15.Ik woon in kropswolde.</h3>
+<h3 style="background-color:DodgerBlue;">Ik ben <span style="color:darkblue">Aimée Pruis</span> en ik ben 15. Ik woon in Kropswolde.</h3>
 <img src="selfie aimee.jpg" alt="foto" width="300" height="200">
 </div>
 
