--- a/box.html
+++ b/box.html
@@ -4,7 +4,7 @@
 <title> demo boxmodel</title>
 <link rel="stylesheet" type="text/css" href="CSS/design.css">
  </head>
- 
+
 </style>
 </head>
 <body>
@@ -17,6 +17,11 @@ dit is een balk
     <div id=menu>
     </div>
     <div id=berichten>
+        <ul>
+            <li>Coffee</li>
+            <li>Tea</li>
+            <li>Milk</li>
+        </ul>
     </div>
     <div id=plaatjes>
     </div>
