--- a/box.html
+++ b/box.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title> demo boxmodel</title>
-<link rel="stylesheet" type="text/css" href="CSS/design.css">
+<link rel="stylesheet" type="text/css" href="CSS/box.CSS">
  </head>
 
 </style>
