--- a/box.html
+++ b/box.html
@@ -11,6 +11,12 @@
 
 <div id="balk">
 dit is een balk
+    <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#news">News</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#about">About</a></li>
+    </ul>
 </div>
 
 <div id=container>
