--- a/box.html
+++ b/box.html
@@ -10,12 +10,12 @@
 <body>
 
 <div id="balk">
-dit is een balk
+
     <ul>
         <li><a href="#home">Home</a></li>
-        <li><a href="#news">News</a></li>
-        <li><a href="#contact">Contact</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#news">Jeugd</a></li>
+        <li><a href="#contact">Teams</a></li>
+        <li><a href="#about">Informatie</a></li>
     </ul>
 </div>
 
@@ -24,7 +24,7 @@ dit is een balk
     </div>
     <div id=berichten>
         <ul>
-            <li>Coffee</li>
+            <li>coffee</li>
             <li>Tea</li>
             <li>Milk</li>
         </ul>
