--- a/box.html
+++ b/box.html
@@ -10,7 +10,7 @@
 <body>
 
 <div id="balk">
-
+    <h2> MHC Dash </h2>
     <ul>
         <li><a href="#home">Home</a></li>
         <li><a href="#news">Jeugd</a></li>
