--- a/box.html
+++ b/box.html
@@ -11,25 +11,25 @@
 
 <div id="balk">
     <h2> MHC Dash </h2>
-    <ul>
-        <li><a href="#home">Home</a></li>
-        <li><a href="#news">Jeugd</a></li>
-        <li><a href="#contact">Teams</a></li>
-        <li><a href="#about">Informatie</a></li>
-    </ul>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#news">News</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#about">About</a></li>
+         </ul>
 </div>
 
-<div id=container>
-    <div id=menu>
-    </div>
-    <div id=berichten>
+<div id="container">
+    <div id="menu">
         <ul>
-            <li>coffee</li>
-            <li>Tea</li>
-            <li>Milk</li>
+            <li><a href="#jongste jeugd">Jongste jeugd</a></li>
+    </div>
+    <div id="berichten">
+        <ul>
+            <li>c</li>
         </ul>
     </div>
-    <div id=plaatjes>
+    <div id="plaatjes">
     </div>
 </div>
 
