--- a/box.html
+++ b/box.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title> demo boxmodel</title>
+<title> MHC Dash </title>
 <link rel="stylesheet" type="text/css" href="CSS/box.CSS">
  </head>
 
@@ -23,6 +23,9 @@
     <div id="menu">
         <ul>
             <li><a href="#jongste jeugd">Jongste jeugd</a></li>
+            <li><a href="#jeugd"></a></li>
+            <li><a href="#senioren"></a></li>
+            <li><a href="#"></a></li>
     </div>
     <div id="berichten">
         <ul>
