--- a/box.html
+++ b/box.html
@@ -13,9 +13,9 @@
     <h2> MHC Dash </h2>
         <ul>
             <li><a href="#home">Home</a></li>
-            <li><a href="#news">News</a></li>
+            <li><a href="#nieuws">nieuws</a></li>
             <li><a href="#contact">Contact</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#over">over</a></li>
          </ul>
 </div>
 
@@ -26,12 +26,13 @@
             <li><a href="#jeugd"></a></li>
             <li><a href="#senioren"></a></li>
     </div>
-    <div id="berichten">
+    <div id="nieuws">
         <ul>
-            <li>c</li>
+            <li></li>
         </ul>
     </div>
-    <div id="plaatjes">
+    <div id="sponsoren">
+
     </div>
 </div>
 
