--- a/nieuws.html
+++ b/nieuws.html
@@ -10,12 +10,12 @@
 <body>
 
 <div id="balk">
-    <h2> MHC Dash </h2>
+    <h2> CONTACT </h2>
         <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#nieuws">nieuws</a></li>
+            <li><a href="home.html">Home</a></li>
+            <li><a href="nieuws.html">nieuws</a></li>
             <li><a href="contact.html">Contact</a></li>
-            <li><a href="#over">over</a></li>
+            <li><a href="over.html">over</a></li>
          </ul>
 </div>
 
