--- a/toets.html/contact.html
+++ b/toets.html/contact.html
@@ -22,13 +22,13 @@
 <div id="container">
     <div id="menu">
         <ul>
-            <li><a href="#jongste jeugd">Jongste jeugd</a></li>
-            <li><a href="#jeugd"></a></li>
-            <li><a href="#senioren"></a></li>
+            <li><a href="jongstejeugd.html">Jongste jeugd</a></li>
+            <li><a href="jeugd.html"></a></li>
+            <li><a href="senioren.html"></a></li>
          </ul>   
     </div>
 
-    <div id="nieuws">
+    <div id="contact">
         <ul>
             <li></li>
         </ul>
