--- a/toets.html/jongstejeugd.html
+++ b/toets.html/jongstejeugd.html
@@ -10,7 +10,7 @@
 <body>
 
 <div id="balk">
-    <h2> MHC Dash </h2>
+    <h2> CONTACT </h2>
         <ul>
             <li><a href="home.html">Home</a></li>
             <li><a href="nieuws.html">nieuws</a></li>
@@ -22,13 +22,13 @@
 <div id="container">
     <div id="menu">
         <ul>
-            <li><a href="#jongste jeugd">Jongste jeugd</a></li>
-            <li><a href="#jeugd"></a></li>
-            <li><a href="#senioren"></a></li>
+            <li><a href="jongstejeugd.html">Jongste jeugd</a></li>
+            <li><a href="jeugd.html"></a></li>
+            <li><a href="senioren.html"></a></li>
          </ul>   
     </div>
 
-    <div id="nieuws">
+    <div id="contact">
         <ul>
             <li></li>
         </ul>
