--- a/toets.html/nieuws.html
+++ b/toets.html/nieuws.html
@@ -12,7 +12,7 @@
 <div id="balk">
     <h2> CONTACT </h2>
         <ul>
-            <li><a href="home.html">Home</a></li>
+            <li><a href="box.html">Home</a></li>
             <li><a href="nieuws.html">nieuws</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="over.html">over</a></li>
